--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aries Dashboard</title>
     <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -13,7 +14,7 @@
         <div class="menu-icon">
             &#9776; 
         </div>
-        </header>
+    </header>
 
     <main>
         <div class="content-left">
@@ -21,9 +22,12 @@
             <p class="aries-subtitle">King</p>
         </div>
         <div class="content-right">
-            <img src="goat.png" alt="Aries Ram Head" class="goat-image">
+            <img src="images/goat.png" alt="Aries Ram Head" class="goat-image">
         </div>
     </main>
 
-    </body>
+    <footer>
+        </footer>
+
+</body>
 </html>
