--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span id="closeIcon" class="close-icon">&#10094;</span> 
         </div>
         
-        <a href="#" class="sidebar-button">PROJECT</a>
+        <a href="projects.html" class="sidebar-button">PROJECT</a>
         <a href="#" class="sidebar-button">ABOUT</a>
         <a href="#" class="sidebar-button">SETTINGS</a>
     </div>
