--- a/projects.html
+++ b/projects.html
@@ -39,45 +39,54 @@
 
                 <div class="project-list-container">
 
-                    <div class="project-card">
-                        <div class="project-name-box">
-                            <span class="project-name-text">Project Name 1</span>
+                    <a href="project_detail.html" class="project-card-link">
+                        <div class="project-card">
+                            <div class="project-name-box">
+                                <span class="project-name-text">Project Name 1</span>
+                            </div>
+                            <div class="project-status-box">
+                                <span class="status-label">STATUS</span>
+                                <div class="dropdown-box">DROPDOWN</div>
+                            </div>
                         </div>
-                        <div class="project-status-box">
-                            <span class="status-label">STATUS</span>
-                            <div class="dropdown-box">DROPDOWN</div>
-                        </div>
-                    </div>
+                    </a>
 
-                    <div class="project-card">
-                        <div class="project-name-box">
-                            <span class="project-name-text">Project Name 2</span>
+                    <a href="project_detail.html" class="project-card-link">
+                        <div class="project-card">
+                            <div class="project-name-box">
+                                <span class="project-name-text">Project Name 2</span>
+                            </div>
+                            <div class="project-status-box">
+                                <span class="status-label">STATUS</span>
+                                <div class="dropdown-box">DROPDOWN</div>
+                            </div>
                         </div>
-                        <div class="project-status-box">
-                            <span class="status-label">STATUS</span>
-                            <div class="dropdown-box">DROPDOWN</div>
-                        </div>
-                    </div>
+                    </a>
                     
-                    <div class="project-card">
-                        <div class="project-name-box">
-                            <span class="project-name-text">Project Name 3</span>
+                    <a href="project_detail.html" class="project-card-link">
+                        <div class="project-card">
+                            <div class="project-name-box">
+                                <span class="project-name-text">Project Name 3</span>
+                            </div>
+                            <div class="project-status-box">
+                                <span class="status-label">STATUS</span>
+                                <div class="dropdown-box">DROPDOWN</div>
+                            </div>
                         </div>
-                        <div class="project-status-box">
-                            <span class="status-label">STATUS</span>
-                            <div class="dropdown-box">DROPDOWN</div>
-                        </div>
-                    </div>
+                    </a>
 
-                    <div class="project-card">
-                        <div class="project-name-box">
-                            <span class="project-name-text">Project Name 4</span>
+                    <a href="project_detail.html" class="project-card-link">
+                        <div class="project-card">
+                            <div class="project-name-box">
+                                <span class="project-name-text">Project Name 4</span>
+                            </div>
+                            <div class="project-status-box">
+                                <span class="status-label">STATUS</span>
+                                <div class="dropdown-box">DROPDOWN</div>
+                            </div>
                         </div>
-                        <div class="project-status-box">
-                            <span class="status-label">STATUS</span>
-                            <div class="dropdown-box">DROPDOWN</div>
-                        </div>
-                    </div>
+                    </a>
+
                 </div>
             </div>
         </main>
