--- a/project_detail.html
+++ b/project_detail.html
@@ -197,20 +197,28 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
   function uid(){ return Date.now().toString(36) + Math.random().toString(36).slice(2,6); }
   function clamp(v,a,b){return Math.max(a,Math.min(b,v));}
   function flash(msg){ const el=document.createElement('div'); el.textContent=msg; Object.assign(el.style,{position:'fixed',right:'20px',bottom:'24px',background:'#0b74ff',color:'#fff',padding:'8px 12px',borderRadius:'8px',zIndex:1500}); document.body.appendChild(el); setTimeout(()=>el.remove(),1200); }
-  // pageToModel: convert client page coords to model coords (account for board transform & scale)
+
+  /* Coordinate mapping
+     Board transform: translate(tx,ty) scale(scale) where
+     tx = -canvas.width/2 + pan.x
+     ty = -canvas.height/2 + pan.y
+     We need to convert page (client) coords -> model coords (canvas space)
+  */
   function pageToModel(clientX, clientY){
-    // get board's top-left in page coords
-    const br = board.getBoundingClientRect(); // board is transformed (translated & scaled)
-    // we want coordinates in the board's unscaled local coordinate space
-    const x = (clientX - br.left) / scale + (canvas.offsetWidth/2) - pan.x/scale;
-    const y = (clientY - br.top)  / scale + (canvas.offsetHeight/2) - pan.y/scale;
-    return { x, y };
+    const boardRect = board.getBoundingClientRect();
+    // convert page -> board local (unscaled) coords
+    const localX = (clientX - boardRect.left) / scale;
+    const localY = (clientY - boardRect.top)  / scale;
+    // board local origin corresponds to model origin offset by (-canvas.width/2 + pan.x, -canvas.height/2 + pan.y)
+    const mx = localX + (canvas.offsetWidth/2) - pan.x/scale;
+    const my = localY + (canvas.offsetHeight/2) - pan.y/scale;
+    return { x: mx, y: my };
   }
   function modelToPage(mx,my){
-    const br = board.getBoundingClientRect();
-    const px = br.left + ((mx - (canvas.offsetWidth/2) + pan.x/scale) * scale);
-    const py = br.top  + ((my - (canvas.offsetHeight/2) + pan.y/scale) * scale);
-    return { x: px, y: py };
+    const boardRect = board.getBoundingClientRect();
+    const localX = (mx - (canvas.offsetWidth/2) + pan.x/scale) * scale;
+    const localY = (my - (canvas.offsetHeight/2) + pan.y/scale) * scale;
+    return { x: boardRect.left + localX, y: boardRect.top + localY };
   }
 
   function getNodeBounds(n){ return { x: n.x, y: n.y, w: n.w || 230, h: n.h || 120 }; }
@@ -220,7 +228,7 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
     const b = getNodeBounds(n);
     const topY = b.y;
     const bottomY = b.y + b.h;
-    const xs = [ b.x + b.w*0.18, b.x + b.w*0.5, b.x + b.w*0.82 ]; // slightly inset to look professional
+    const xs = [ b.x + b.w*0.18, b.x + b.w*0.5, b.x + b.w*0.82 ];
     return [
       { x: xs[0], y: topY, side: 'top' },
       { x: xs[1], y: topY, side: 'top' },
@@ -240,35 +248,33 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
   /* Grid */
   function updateGrid(){ if(!showGrid.checked){ canvas.style.backgroundImage='none'; return; } const size = gridSize; canvas.style.backgroundImage = `linear-gradient(to right, var(--grid-color) 1px, transparent 1px), linear-gradient(to bottom, var(--grid-color) 1px, transparent 1px)`; canvas.style.backgroundSize = size+'px '+size+'px'; }
 
-  /* Transform */
-  function applyTransform(){
-    // translate origin so canvas is centered and pan/scale applied
-    const tx = -canvas.offsetWidth/2 + pan.x;
-    const ty = -canvas.offsetHeight/2 + pan.y;
-    board.style.transform = `translate(${tx}px,${ty}px) scale(${scale})`;
-    zoomIndicator.textContent = Math.round(scale*100)+'%';
-    // align svg to canvas (we want svg's local coordinates to match model coordinates)
-    syncSVGSize();
-    renderLinks();
-  }
-
+  /* Transform & SVG sync */
   function syncSVGSize(){
-    // Make svg coordinate system match canvas logical size so model coords map 1:1 to svg coords
     svg.setAttribute('width', canvas.offsetWidth);
     svg.setAttribute('height', canvas.offsetHeight);
     svg.setAttribute('viewBox', `0 0 ${canvas.offsetWidth} ${canvas.offsetHeight}`);
     svg.style.left = canvas.style.left || '0px';
     svg.style.top = canvas.style.top || '0px';
   }
+  function applyTransform(){
+    const tx = -canvas.offsetWidth/2 + pan.x;
+    const ty = -canvas.offsetHeight/2 + pan.y;
+    board.style.transform = `translate(${tx}px,${ty}px) scale(${scale})`;
+    zoomIndicator.textContent = Math.round(scale*100)+'%';
+    syncSVGSize();
+    renderLinks();
+  }
 
   function zoomAt(newScale, clientX, clientY){
+    // keep the point under the cursor fixed
     const before = pageToModel(clientX, clientY);
     scale = clamp(newScale, MIN_SCALE, MAX_SCALE);
+    // after recalculating transform, compute model coordinate under cursor
     applyTransform();
     const after = pageToModel(clientX, clientY);
-    // adjust pan so point under cursor remains fixed
-    pan.x += (after.x - before.x) * scale;
-    pan.y += (after.y - before.y) * scale;
+    // Adjust pan so the same model point stays under the cursor
+    pan.x += (before.x - after.x) * scale;
+    pan.y += (before.y - after.y) * scale;
     applyTransform();
   }
 
@@ -303,12 +309,13 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
       el.querySelector('.body').textContent = n.body||'';
       el.style.outline = (selectedNodeId === n.id) ? '3px solid rgba(11,116,255,0.12)' : 'none';
     });
+    // ensure connectors update immediately when nodes move
     renderLinks();
   }
 
   function addNodeAt(x,y){
     const id = uid();
-    const node = { id, x:Math.max(40,x), y:Math.max(40,y), w:230, h:120, title:'New block', body:'Double-click or click ✎ to edit', color:'#fffdf5', shape:'card' };
+    const node = { id, x:Math.max(40,Math.round(x)), y:Math.max(40,Math.round(y)), w:230, h:120, title:'New block', body:'Double-click or click ✎ to edit', color:'#fffdf5', shape:'card' };
     model.nodes.push(node); saveModel(); renderNodes(); openModal(id);
   }
 
@@ -336,6 +343,7 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
     const node = model.nodes.find(n=>n.id===draggingId);
     if(!node) return;
     node.x = Math.max(0, Math.round(x)); node.y = Math.max(0, Math.round(y));
+    // update display and connectors live
     renderNodes();
   }
   function onNodePointerUp(e){
@@ -348,7 +356,7 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
     saveModel(); renderNodes();
   }
 
-  /* Auto-link on drop by nearest anchors (keeps the chosen anchor indices) */
+  /* Auto-link on drop by nearest anchors */
   function anchorDistance(a,b){ return Math.hypot(a.x - b.x, a.y - b.y); }
   function autoLinkOnDrop(node){
     if(!node) return;
@@ -383,64 +391,47 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
   function onPanMove(e){ if(!isPanning) return; pan.x = e.clientX - panStart.x; pan.y = e.clientY - panStart.y; applyTransform(); }
   function onPanEnd(e){ isPanning = false; panLayer.removeEventListener('pointermove', onPanMove); panLayer.removeEventListener('pointerup', onPanEnd); saveModel(); }
 
-  panLayer.addEventListener('wheel', e=>{ e.preventDefault(); const delta = e.deltaY > 0 ? -SCALE_STEP : SCALE_STEP; const newScale = scale + delta; zoomAt(newScale,e.clientX,e.clientY); }, { passive:false });
+  // wheel zoom — zoom where mouse pointer is
+  panLayer.addEventListener('wheel', e=>{
+    e.preventDefault();
+    const delta = e.deltaY > 0 ? -SCALE_STEP : SCALE_STEP;
+    const newScale = scale + delta;
+    zoomAt(newScale, e.clientX, e.clientY);
+  }, { passive:false });
 
-  // pinch
+  // pinch handlers
   panLayer.addEventListener('pointerdown', e=>{ pointerMap.set(e.pointerId,e); if(pointerMap.size===2){ const arr=Array.from(pointerMap.values()); pinchState={ dist: Math.hypot(arr[0].clientX-arr[1].clientX, arr[0].clientY-arr[1].clientY), scale:scale, center:{x:(arr[0].clientX+arr[1].clientX)/2,y:(arr[0].clientY+arr[1].clientY)/2} }; } e.target.setPointerCapture(e.pointerId); });
   panLayer.addEventListener('pointermove', e=>{ if(!pointerMap.has(e.pointerId)) return; pointerMap.set(e.pointerId,e); if(pinchState && pointerMap.size===2){ const arr=Array.from(pointerMap.values()); const dist=Math.hypot(arr[0].clientX-arr[1].clientX,arr[0].clientY-arr[1].clientY); const factor = dist / pinchState.dist; const newScale = clamp(pinchState.scale * factor, MIN_SCALE, MAX_SCALE); zoomAt(newScale, pinchState.center.x, pinchState.center.y); } });
   ['pointerup','pointercancel'].forEach(t=>panLayer.addEventListener(t,e=>{ pointerMap.delete(e.pointerId); if(pointerMap.size<2) pinchState=null; }));
 
-  /* ROUTING: improved orthogonal polyline between two anchors.
-     Strategy:
-     - Prefer single-elbow L-shape or two-bend mid route,
-     - Make sure the intermediate elbow is placed outside node bounding boxes using small margin,
-     - If custom points exist (link.points) keep them.
-  */
+  /* Routing */
   function orthogonalRoute(aFrom, aTo){
     const sx = aFrom.x, sy = aFrom.y, tx = aTo.x, ty = aTo.y;
     const dx = Math.abs(tx - sx), dy = Math.abs(ty - sy);
     const margin = 12;
-
-    // helper to push a coordinate away from a node rect edge
-    function outsideCoord(val, rectStart, rectEnd, push){
-      if(val >= rectStart - 0.5 && val <= rectEnd + 0.5){
-        // push outside
-        return val < (rectStart+rectEnd)/2 ? rectStart - push : rectEnd + push;
-      }
-      return val;
-    }
-
-    // If nearly horizontal
     if(dy < margin){
       const mx = (sx + tx) / 2;
       return [ {x:sx,y:sy}, {x:mx,y:sy}, {x:mx,y:ty}, {x:tx,y:ty} ];
     }
-    // If nearly vertical
     if(dx < margin){
       const my = (sy + ty)/2;
       return [ {x:sx,y:sy}, {x:sx,y:my}, {x:tx,y:my}, {x:tx,y:ty} ];
     }
-
-    // prefer L-shape if sides allow without crossing through nodes:
     if((aFrom.side==='left' && aTo.side==='right') || (aFrom.side==='right' && aTo.side==='left')){
-      const midX = (sx + tx)/2;
-      return [ {x:sx,y:sy}, {x:midX,y:sy}, {x:midX,y:ty}, {x:tx,y:ty} ];
+      const mx = (sx + tx)/2;
+      return [ {x:sx,y:sy}, {x:mx,y:sy}, {x:mx,y:ty}, {x:tx,y:ty} ];
     }
     if((aFrom.side==='top' && aTo.side==='bottom') || (aFrom.side==='bottom' && aTo.side==='top')){
-      const midY = (sy + ty)/2;
-      return [ {x:sx,y:sy}, {x:sx,y:midY}, {x:tx,y:midY}, {x:tx,y:ty} ];
+      const my = (sy + ty)/2;
+      return [ {x:sx,y:sy}, {x:sx,y:my}, {x:tx,y:my}, {x:tx,y:ty} ];
     }
-
-    // Fallback L-shaped via midX but nudge elbow outside both nodes' bbox to avoid overlap
     const midX = (sx + tx) / 2;
     return [ {x:sx,y:sy}, {x:midX,y:sy}, {x:midX,y:ty}, {x:tx,y:ty} ];
   }
 
-  /* Links: render as orthogonal paths, with endpoint handles */
+  /* Links: render as orthogonal paths, re-calc endpoints from anchors each render */
   function renderLinks(){
-    // clear and rebuild
     svg.innerHTML = '';
-    // marker defs
     const defs = document.createElementNS('http://www.w3.org/2000/svg','defs');
     const arrowColor = getComputedStyle(document.documentElement).getPropertyValue('--link-color') || '#0f172a';
     defs.innerHTML = `<marker id="arrow" viewBox="0 0 10 10" refX="8" refY="5" markerWidth="6" markerHeight="6" orient="auto-start-reverse"><path d="M 0 0 L 10 5 L 0 10 z" fill="${arrowColor.trim()}"></path></marker>`;
@@ -450,13 +441,11 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
       const fromNode = model.nodes.find(n=>n.id===link.from);
       const toNode = model.nodes.find(n=>n.id===link.to);
       if(!fromNode || !toNode) return;
-
       const anchorsFrom = computeAnchors(fromNode);
       const anchorsTo   = computeAnchors(toNode);
       const aFrom = anchorsFrom[ link.fromAnchor ?? 6 ];
       const aTo   = anchorsTo[ link.toAnchor ?? 7 ];
 
-      // points: preserve custom link.points; otherwise compute orthogonal
       let pts;
       if(link.points && link.points.length){
         pts = [ {x:aFrom.x, y:aFrom.y} ].concat(link.points).concat([ {x:aTo.x, y:aTo.y} ]);
@@ -464,7 +453,6 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
         pts = orthogonalRoute(aFrom, aTo);
       }
 
-      // draw polyline
       const ptsStr = pts.map(p => `${p.x},${p.y}`).join(' ');
       const poly = document.createElementNS('http://www.w3.org/2000/svg','polyline');
       poly.setAttribute('points', ptsStr);
@@ -477,7 +465,6 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
       poly.style.pointerEvents = 'stroke';
       poly.addEventListener('click', e=>{ e.stopPropagation(); selectLink(link.id); });
       poly.addEventListener('dblclick', e=>{ e.stopPropagation();
-        // add custom bend point
         const rect = canvas.getBoundingClientRect();
         const mx = (e.clientX - rect.left) / scale, my = (e.clientY - rect.top) / scale;
         link.points = link.points || [];
@@ -485,7 +472,6 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
       });
       svg.appendChild(poly);
 
-      // endpoints (start and end)
       const start = pts[0], end = pts[pts.length-1];
       const startHandle = document.createElementNS('http://www.w3.org/2000/svg','circle');
       startHandle.setAttribute('cx', start.x); startHandle.setAttribute('cy', start.y); startHandle.setAttribute('r',6);
@@ -501,7 +487,6 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
       enableEndpointDrag(endHandle, link, 'to');
       svg.appendChild(endHandle);
 
-      // arrow (invisible but with marker)
       const prev = pts[pts.length-2] || start;
       const arrowLine = document.createElementNS('http://www.w3.org/2000/svg','line');
       arrowLine.setAttribute('x1', prev.x); arrowLine.setAttribute('y1', prev.y);
@@ -509,7 +494,6 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
       arrowLine.setAttribute('stroke','transparent'); arrowLine.setAttribute('marker-end','url(#arrow)');
       svg.appendChild(arrowLine);
 
-      // bends for custom points
       (link.points||[]).forEach((p,i)=>{
         const c = document.createElementNS('http://www.w3.org/2000/svg','circle');
         c.setAttribute('cx', p.x); c.setAttribute('cy', p.y); c.setAttribute('r',7);
@@ -520,23 +504,19 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
       });
     });
 
-    // ensure svg sizing is in sync
     syncSVGSize();
   }
 
-  /* Endpoint dragging: allows reconnecting to nearest anchor on drop */
+  /* Endpoint dragging */
   function enableEndpointDrag(circleEl, link, which){
     let dragging = false;
     circleEl.addEventListener('pointerdown', (e)=>{
       e.stopPropagation(); dragging = true; circleEl.setPointerCapture(e.pointerId);
-      // show pointer cursor and allow moving
-      const rect = canvas.getBoundingClientRect();
       const onMove = (ev)=>{
         const rect2 = canvas.getBoundingClientRect();
         const mx = (ev.clientX - rect2.left) / scale;
         const my = (ev.clientY - rect2.top) / scale;
         circleEl.setAttribute('cx', mx); circleEl.setAttribute('cy', my);
-        // preview route
         renderTemporaryLinkPreview(link, {x:mx,y:my}, which);
       };
       const onUp = (ev)=>{
@@ -548,9 +528,9 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
         if(snap){
           if(which === 'from'){ link.from = snap.nodeId; link.fromAnchor = snap.anchorIndex; }
           else { link.to = snap.nodeId; link.toAnchor = snap.anchorIndex; }
+          // keep custom in-between points but endpoints remain anchors
           link.points = link.points && link.points.length ? link.points : null;
         } else {
-          // released in empty space -> convert endpoint into a custom bend point (if not already)
           if(!link.points) link.points = [];
           if(which === 'from'){ link.points.unshift({ x: mx, y: my }); }
           else { link.points.push({ x: mx, y: my }); }
@@ -562,11 +542,8 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
     });
   }
 
-  // temporary visual preview while dragging endpoint
   function renderTemporaryLinkPreview(link, tempPoint, which){
-    // render base links then append preview polyline on top
     renderLinks();
-    // find anchor positions for the non-drag endpoint
     const fromNode = model.nodes.find(n=>n.id===link.from);
     const toNode = model.nodes.find(n=>n.id===link.to);
     if(!fromNode || !toNode) return;
@@ -589,7 +566,6 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
     svg.appendChild(preview);
   }
 
-  // find nearest anchor to a point; returns {nodeId, anchorIndex, anchor, dist}
   function findNearestAnchor(pt, threshold){
     let best = Infinity, bestFound = null;
     model.nodes.forEach(n=>{
@@ -603,7 +579,7 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
     return null;
   }
 
-  /* Bend point dragging (for custom link.points) */
+  /* Bend drag */
   function enableBendDrag(circleEl, link, index){
     let dragging = false;
     circleEl.addEventListener('pointerdown', (e)=>{
@@ -647,7 +623,6 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
     selectedLinkId = null; selectedLinkLabel.textContent = 'none'; toolDeleteLink.disabled = true; saveModel(); renderLinks();
   });
 
-  // keyboard delete/backspace
   window.addEventListener('keydown', (e)=>{
     if(e.key === 'Delete' || e.key === 'Backspace'){
       if(selectedNodeId){
@@ -661,7 +636,7 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
     }
   });
 
-  /* Connector tool flow */
+  /* Connector flow */
   toolConnector.addEventListener('click', ()=> {
     connectMode = !connectMode; connectFrom = null;
     toolConnector.style.background = connectMode ? '#fdecea' : '';
@@ -707,7 +682,14 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
   deleteBlockBtn.addEventListener('click', ()=>{ if(!selectedNodeId) return closeModal(); if(!confirm('Delete this block?')) return; model.links = model.links.filter(l => l.from !== selectedNodeId && l.to !== selectedNodeId); model.nodes = model.nodes.filter(n => n.id !== selectedNodeId); saveModel(); renderNodes(); closeModal(); });
 
   /* UI actions */
-  function handleAddNode(){ const rect = canvas.getBoundingClientRect(); const pos = pageToModel(rect.left + rect.width/2, rect.top + rect.height/2); addNodeAt(pos.x-100,pos.y-40); }
+  // Add node at current viewport center (visible screen center)
+  function handleAddNode(){
+    // use the center of the viewport (window) as screen point, convert to model coords
+    const cx = window.innerWidth / 2;
+    const cy = window.innerHeight / 2;
+    const pos = pageToModel(cx, cy);
+    addNodeAt(pos.x - 100, pos.y - 40);
+  }
   document.getElementById('addNode')?.addEventListener('click', handleAddNode);
   toolAddNode.addEventListener('click', handleAddNode);
 
@@ -740,7 +722,6 @@ svg.link-layer{position:absolute;left:0;top:0;width:100%;height:100%;pointer-eve
   /* Debug: show anchors */
   window.__aries = window.__aries || {};
   window.__aries.showAnchors = function(show){
-    // remove existing anchor dots
     document.querySelectorAll('.anchor-dot').forEach(el=>el.remove());
     if(!show) return;
     model.nodes.forEach(n=>{
